--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
+  <meta charset="UTF-8">
   <title>YouTube Downloader</title>
   <style>
     body {
@@ -12,10 +14,12 @@
       align-items: center;
       padding-top: 60px;
     }
+
     h1 {
       color: #00ffae;
       margin-bottom: 20px;
     }
+
     input {
       width: 400px;
       padding: 12px;
@@ -24,6 +28,7 @@
       font-size: 16px;
       outline: none;
     }
+
     button {
       margin-top: 20px;
       padding: 12px 20px;
@@ -35,14 +40,45 @@
       border-radius: 8px;
       cursor: pointer;
     }
+
     button:hover {
       background: #00e69c;
     }
+
+    select {
+      width: 420px;
+      padding: 12px;
+      border-radius: 8px;
+      border: none;
+      font-size: 16px;
+      outline: none;
+      background: #2c2c2c;
+      color: #fff;
+      margin-top: 20px;
+      appearance: none;
+      background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20width%3D'10'%20height%3D'5'%20viewBox%3D'0%200%2010%205'%20xmlns%3D'http%3A//www.w3.org/2000/svg'%3E%3Cpath%20fill%3D'%23fff'%20d%3D'M0%200l5%205%205-5z'/%3E%3C/svg%3E");
+      background-repeat: no-repeat;
+      background-position: right 12px center;
+      background-size: 10px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+
+    select:hover {
+      background-color: #3a3a3a;
+    }
+
+    option {
+      background: #1a1a1a;
+      color: #fff;
+    }
+
     #status {
       margin-top: 20px;
       font-size: 14px;
       color: #aaa;
     }
+
     #thumbnail {
       margin-top: 30px;
       width: 640px;
@@ -53,11 +89,16 @@
     }
   </style>
 </head>
+
 <body>
   <h1>🔥 YouTube Downloader</h1>
-  <input type="text" id="url" placeholder="Paste YouTube video URL here" oninput="updateThumbnail()" />
+  <input type="text" id="url" placeholder="Paste YouTube video URL here" oninput="handleInput()" />
   <img id="thumbnail" src="" alt="Video Thumbnail" />
-  <button onclick="download()">Download Best MP4</button>
+  <select id="format-select">
+    <option value="bestvideo[ext=mp4]">🎬 Best MP4 (video only)</option>
+    <option value="bestaudio[ext=m4a]/bestaudio">🎵 Best MP3 (audio only)</option>
+  </select>
+  <button onclick="download()">Download</button>
   <div id="status"></div>
 
   <script>
@@ -66,24 +107,34 @@
       return match ? match[1] : null;
     }
 
-    function updateThumbnail() {
+    function handleInput() {
       const url = document.getElementById('url').value;
       const videoId = extractVideoID(url);
       const thumb = document.getElementById('thumbnail');
+      const formatSelect = document.getElementById('format-select');
 
       if (videoId) {
         thumb.src = `https://img.youtube.com/vi/${videoId}/maxresdefault.jpg`;
         thumb.style.display = 'block';
+        fetchFormats(url);
       } else {
         thumb.style.display = 'none';
+        formatSelect.innerHTML = '';
+        const defaultOption = document.createElement('option');
+        defaultOption.textContent = 'Enter valid YouTube URL';
+        defaultOption.disabled = true;
+        defaultOption.selected = true;
+        formatSelect.appendChild(defaultOption);
       }
     }
 
     async function download() {
       const url = document.getElementById('url').value;
+      const format = document.getElementById('format-select').value;
       const status = document.getElementById('status');
-      if (!url) {
-        status.textContent = 'Please enter a URL.';
+
+      if (!url || !format) {
+        status.textContent = 'Please enter a valid URL and choose a format.';
         return;
       }
 
@@ -93,7 +144,7 @@
         const res = await fetch('/download', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ url })
+          body: JSON.stringify({ url, format_id: format })
         });
 
         const data = await res.json();
@@ -104,4 +155,5 @@
     }
   </script>
 </body>
+
 </html>
